Revert "fetch program Stage from program"
This reverts commit c33e1e81ea1fd5b9beba5bc16317a91fb2311acb.